--- a/common/scss/_lists.scss
+++ b/common/scss/_lists.scss
@@ -56,6 +56,7 @@
             margin-top: 20px;
         }
     }
+
     &.ty_freeboard {
 
         .pp_list_item {
@@ -186,6 +187,40 @@
 }
 
 
+.list_common {
+    &_item {
+        border-bottom: 1px solid #eee;
+    }
+    &_link {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+
+    }
+    .tit {
+        font-size: 14px;
+        font-weight: 500;
+    }
+}
+
+.list_scroll {
+    padding-right: 10px;
+    margin-right: -10px;
+    &::-webkit-scrollbar {
+        width: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: $c_key;
+        border-radius: 4px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+        border-radius: 4px;
+    }
+}
+
+
 .sub_vid_slide {
     overflow-x: auto;
     padding-bottom: 10px;
@@ -245,6 +280,15 @@
                     padding: 8px 9px;
                 }
             }
+        }
+    }
+
+    .list_common {
+        &_link {
+            height: 40px;
+        }
+        .tit {
+            font-size: 12px;
         }
     }
 }
