--- a/common/scss/_paging.scss
+++ b/common/scss/_paging.scss
@@ -1,30 +1,74 @@
 .paging {
-    margin-top: 20px;
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     &_list {
         margin: 0 10px;
-        li {
-            display: inline-block;
-            vertical-align: top;
+        display: flex;
+        li + li {
+            margin-left: 10px;
         }
     }
     &_btn {
         display: block;
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         box-sizing: border-box;
         text-align: center;
-        color: #eee;
+        color: #666;
+        border: 1px solid #ddd;
+        box-sizing: border-box;
+        line-height: 28px;
+        border-radius: 4px;
+        background-repeat: no-repeat;
+        background-position: center center;
         &.current {
             font-weight: bold;
+            color: $c_key;
+            border-color: $c_key;
         }
-        &.ty_ctrl {
-            background-color: $c_key;
-            & + .paging_btn.ty_ctrl {
+        &.first {
+            margin-right: 10px;
+            background-image: url(../../images/common/paging_first.svg);
+        }
+        &.prev {
+            background-image: url(../../images/common/paging_prev.svg);
+        }
+        &.next {
+            background-image: url(../../images/common/paging_next.svg);
+        }
+        &.last {
+            margin-left: 10px;
+            background-image: url(../../images/common/paging_last.svg);
+        }
+    }
+}
+
+@media (max-width: 767px) {
+
+    .paging {
+        margin-top: 20px;
+        &_list {
+            margin: 0 5px;
+            display: flex;
+            li + li {
+                margin-left: 5px;
+            }
+        }
+        &_btn {
+            width: 22px;
+            height: 22px;
+            line-height: 20px;
+            font-size: 12px;
+            background-size: auto 8px;
+            &.first {
+                margin-right: 5px;
+            }
+            &.last {
                 margin-left: 5px;
             }
         }
     }
+
 }
